--- a/resources/css/sources.scss
+++ b/resources/css/sources.scss
@@ -10,8 +10,12 @@
     width: 640px;
   }
 
-  @media screen and (min-width: 1024) {
+  @media screen and (min-width: 1024px) {
     width: 960px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 1128px;
   }
 
   h1 {
