--- a/resources/views/pages/video.edge
+++ b/resources/views/pages/video.edge
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -8,9 +8,7 @@
 
   @vite(['resources/js/video.js'])
 
-  <script>
-    var streamLink = "{{ link }}";
-  </script>
+  <script>var streamLink = "{{ link }}";</script>
 </head>
 
 <body>
