--- a/resources/views/pages/sources.edge
+++ b/resources/views/pages/sources.edge
@@ -68,7 +68,7 @@
       <pre>&lt;iframe
   width="500"
   height="375"
-  src="{{ url }}/video/&lt;ID&gt;"
+  src="{{ app_url }}/video/&lt;ID&gt;"
   frameborder="0"
   allow="autoplay"
   allowfullscreen&gt;
@@ -84,7 +84,7 @@
       <pre>&lt;iframe
   width="500"
   height="375"
-  src="{{ url }}/video/waopb5n7tu6xgwicnc39zfie"
+  src="{{ app_url }}/video/waopb5n7tu6xgwicnc39zfie"
   frameborder="0"
   allow="autoplay"
   allowfullscreen&gt;
