--- a/resources/views/pages/sources.edge
+++ b/resources/views/pages/sources.edge
@@ -37,7 +37,7 @@
             </td>
             <td>{{ source.url }}</td>
             <td>
-              <form action="{{ route('sources.restart') }}" method="POST">
+              <form action="{{ route('sources.restart', [source.id]) }}" method="POST">
                 {{ csrfField() }}
 
                 <button type="submit">Reiniciar</button>
